[tool.poetry]
name = "web-6new"
version = "0.1.0"
description = ""
authors = ["Tetiana Kobzar <tkobzar.smm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
faker = "^24.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
